# PHY-607-Project3

./: Ising_2D.py
ising_model/: README.md  pyproject.toml
ising_model/src/ising2d/: __init__.py
ising_model/src/ising2d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ising_model/src/ising2d/analysis/: __init__.py  observables.py
ising_model/src/ising2d/cli/: run_simulation.py
ising_model/src/ising2d/config/: __init__.py  parameters.py
ising_model/src/ising2d/model/: __init__.py  ising.py
ising_model/src/ising2d/visualization/: __init__.py  plotting.py
ising_model/src/ising_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
