[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ising_model"
version = "0.1.0"
description = "2D Ising Model Simulation Package"
authors = [
    { name = "Tanya Chhabra", email = "tachhabr@syr.edu" },
    { name = "Prakriti Singh", email = "psingh39@syr.edu" },
    { name = "Carlos Enrique Moguel-Lehmer", email = "cmoguell@syr.edu" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
]
license = {text = "MIT"} 
readme = "README.md"

[project.scripts]
run-ising = "ising2d.cli.run_simulation:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "ising2d",
    "ising2d.model",
    "ising2d.analysis",
    "ising2d.visualization",
    "ising2d.config",
    "ising2d.cli"
]

[tool.setuptools.package-data]
ising2d = [
    "config/*.py",
    "config/*.json"  
]
